src/test/deca/context/valid/provided/soustraction_int.deca
// Description:
//    Programme faisant correctement l'opération de soustraction
//
// Resultats: 1
//
//
// Historique:
//    cree le 01/01/2022

{
        int x = 3;
	int y = 2;
	int z;
	z = x - y;
	println(z);
}
